<resources>
    <string name="app_name">Reader Mang</string>
    <string name="Ranck">Рейтинг:  </string>
    <string name="ganres">Жанры</string>
    <string name="description">Описание</string>
    <string name="Volumes">Томов</string>
    <string name="Translate">Перевод:</string>
    <string name="Author">Автор:</string>
    <string name="what_are_searching">Название:</string>
    <string name="genres">Жанры</string>
    <string name="enter_the_name_of_the_manga">Введите</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="descr_read">Читать</string>
    <string name="descr_browser">Открыть в браузере</string>
    <string name="nav_title_mang">Манга</string>
    <string name="nav_list_site">Сайты</string>
    <string name="nav_top_mang">Манга</string>
    <string name="nav_title_person">Персональное</string>
    <string name="nav_bookmark">Избранное</string>
    <string name="nav_recently_read">Просмотренное</string>
    <string name="nav_download">Скачанное</string>
    <string name="nav_title_other">Разное</string>
    <string name="nav_tools">Настройки</string>
    <string name="search">Поиск</string>
    <string name="reload_page">Перезагрузка страницы</string>
    <string name="sett_brightness">Яркость</string>
    <string name="sett_rotation_lock">Блок. поворот. экрана</string>
    <string name="sett_rotation_unlock">Разблок. поворот. экрана</string>
    <string name="Ok">OK</string>
    <string name="title_permission">Получение прав.</string>
    <string name="info_prermission">Для работы этой функции требуются права.</string>
    <string name="auto_brightness">Автонастройка</string>
    <string name="next_skip_chapter">Следующая глава</string>
    <string name="previous_chapter">Предыдущая глава</string>
    <string name="info_readmanga">"На сайте размещена самая большая коллекция манги в Рунете. Отсутвует взрослая манга."</string>
    <string name="info_mintmanga">"На сайте размещена только манга для взрослых."</string>
    <string name="info_selfmanga">"На сайте размещается только русская авторская манга и журналы о манге."</string>
    <string name="info_mangachan">"На сайте размещен большой качественный каталог. Присутствует взрослая манга."</string>
    <string name="selection_site">Выберите сайты в настройках приложения.</string>
    <string name="mang_not_found">Манга не найдена.</string>
    <string name="not_recentle_read">Нет просмотреных манг.</string>
    <string name="not_other_mang">Не найдено похожих манг.</string>
    <string name="open_browser">Открыть в браузере</string>
    <string name="not_download_mang">Нет скачаных манг.</string>
    <string name="not_bookmark_mang">Нет избранных манг.</string>
    <string name="chapter_complite">Главы загружены.</string>
    <string name="vibration">Вибрация</string>
    <string name="sound">Звук</string>
    <string name="new_chapter">Обновление манг.</string>
    <string name="download_complite">Скачивание завершено.</string>
    <string name="enter_back">Пожалуйста, нажмите \"назад\", чтобы выйти</string>
    <string name="save_zoom">Сохранять зум при просмотре манги.</string>

</resources>
