<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.nikita.testadapter.glav_screen"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linear_description_mang">

            <include layout="@layout/inc_grid_layout_description_mang"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/gange"
                android:layout_gravity="center"
                android:textStyle="bold|italic"
                android:id="@+id/textGanresName"
                android:textColor="@color/primary_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:background="@drawable/background_text_view_description"
                android:id="@+id/textGanres"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/description"
                android:layout_gravity="center"
                android:textColor="@color/primary_text"
                android:textStyle="bold|italic"
                android:id="@+id/textDescriptionName"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:layout_marginLeft="2dp"
                android:background="@drawable/background_text_view_description"
                android:id="@+id/textDescription"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <Button
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/descr_read"
                    android:id="@+id/button"
                    android:onClick="StartRead"
                    android:background="@drawable/backgroung_button"
                    android:layout_weight="0.46" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descr_browser"
                    android:id="@+id/openBrowser"
                    android:onClick="openURL"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/backgroung_button"/>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible"/>
    </LinearLayout>


</ScrollView>

